[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-env"
version = "1.0.0"
description = "Production incident response simulation. An AI agent receives system alerts and must diagnose and remediate production failures across 3 difficulty levels."
authors = [{ name = "Sahil Shingate" }]
license = { text = "MIT" }
keywords = ["openenv", "incident-response", "sre", "real-world"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.0",
    "openai>=1.30.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
openenv-server = "server.app:main"
server = "server.app:main"


[project.urls]
Homepage = "https://sahilshingate-incident-response-env.hf.space"

